src/snapshots/alma__parser__tests__expression_parser-37.snap
---
source: src/parser.rs
expression: "parse(\"if True { 1 } else 2\")"

---
Input:

if True { 1 } else 2

Result:

1:12: Expected '|' between the record and the fields to update (like this `{ record | field = 5 }`), but instead found: '}'

  1│  if True { 1 } else 2
   │              ↑

Error {
    message: "1:12: Expected \'|\' between the record and the fields to update (like this `{ record | field = 5 }`), but instead found: \'}\'\n\n  1│  if True { 1 } else 2\n   │              ↑",
    token: Token {
        kind: RightBrace,
        position: 12,
        end_position: 13,
        lexeme: "}",
        line: 1,
        column: 12,
        indent: 0,
    },
}
