src/snapshots/alma__parser__tests__expression_parser-39.snap
---
source: src/parser.rs
expression: "parse(\"let x = 1\\nx\")"

---
Input:

let x = 1
x

Result:

Node {
    start: 0,
    end: 11,
    line: 1,
    column: 0,
    value: Expression_ {
        typ: RefCell {
            value: None,
        },
        expr: Let(
            [
                Pattern(
                    Node {
                        start: 4,
                        end: 5,
                        line: 1,
                        column: 4,
                        value: Identifier(
                            Node {
                                start: 4,
                                end: 5,
                                line: 1,
                                column: 4,
                                value: Identifier_ {
                                    name: SymbolU32 {
                                        value: 1,
                                    },
                                    case: Camel,
                                },
                            },
                        ),
                    },
                    Node {
                        start: 8,
                        end: 9,
                        line: 1,
                        column: 8,
                        value: Expression_ {
                            typ: RefCell {
                                value: None,
                            },
                            expr: Float(
                                1.0,
                            ),
                        },
                    },
                ),
            ],
            Node {
                start: 10,
                end: 11,
                line: 2,
                column: 0,
                value: Expression_ {
                    typ: RefCell {
                        value: None,
                    },
                    expr: Identifier(
                        Node {
                            start: 10,
                            end: 11,
                            line: 2,
                            column: 0,
                            value: Identifier_ {
                                name: SymbolU32 {
                                    value: 1,
                                },
                                case: Camel,
                            },
                        },
                    ),
                },
            },
        ),
    },
}
