src/snapshots/alma__parser__tests__expression_parser-4.snap
---
source: src/parser.rs
expression: "parse(\"123\")"

---
Input:

123

Result:

Node {
    start: 0,
    end: 3,
    line: 1,
    column: 0,
    value: Expression_ {
        typ: RefCell {
            value: None,
        },
        expr: Float(
            123.0,
        ),
    },
}
