src/snapshots/alma__parser__tests__expression_parser-41.snap
---
source: src/parser.rs
expression: "parse(\"let x = a\\n  x\\nx\")"

---
Input:

let x = a
  x
x

Result:

Node {
    start: 0,
    end: 15,
    line: 1,
    column: 0,
    value: Expression_ {
        typ: RefCell {
            value: None,
        },
        expr: Let(
            [
                Pattern(
                    Node {
                        start: 4,
                        end: 5,
                        line: 1,
                        column: 4,
                        value: Identifier(
                            Node {
                                start: 4,
                                end: 5,
                                line: 1,
                                column: 4,
                                value: Identifier_ {
                                    name: "x",
                                    case: Camel,
                                },
                            },
                        ),
                    },
                    Node {
                        start: 8,
                        end: 13,
                        line: 1,
                        column: 8,
                        value: Expression_ {
                            typ: RefCell {
                                value: None,
                            },
                            expr: FnCall(
                                Node {
                                    start: 8,
                                    end: 9,
                                    line: 1,
                                    column: 8,
                                    value: Expression_ {
                                        typ: RefCell {
                                            value: None,
                                        },
                                        expr: Identifier(
                                            Node {
                                                start: 8,
                                                end: 9,
                                                line: 1,
                                                column: 8,
                                                value: Identifier_ {
                                                    name: "a",
                                                    case: Camel,
                                                },
                                            },
                                        ),
                                    },
                                },
                                [
                                    Node {
                                        start: 12,
                                        end: 13,
                                        line: 2,
                                        column: 2,
                                        value: Expression_ {
                                            typ: RefCell {
                                                value: None,
                                            },
                                            expr: Identifier(
                                                Node {
                                                    start: 12,
                                                    end: 13,
                                                    line: 2,
                                                    column: 2,
                                                    value: Identifier_ {
                                                        name: "x",
                                                        case: Camel,
                                                    },
                                                },
                                            ),
                                        },
                                    },
                                ],
                            ),
                        },
                    },
                ),
            ],
            Node {
                start: 14,
                end: 15,
                line: 3,
                column: 0,
                value: Expression_ {
                    typ: RefCell {
                        value: None,
                    },
                    expr: Identifier(
                        Node {
                            start: 14,
                            end: 15,
                            line: 3,
                            column: 0,
                            value: Identifier_ {
                                name: "x",
                                case: Camel,
                            },
                        },
                    ),
                },
            },
        ),
    },
}
