src/snapshots/alma__parser__tests__expression_parser-42.snap
---
source: src/parser.rs
expression: "parse(\"let x = a x in x\")"

---
Input:

let x = a x in x

Result:

Node {
    start: 0,
    end: 16,
    line: 1,
    column: 0,
    value: Let(
        [
            Definition {
                pattern: Node {
                    start: 4,
                    end: 5,
                    line: 1,
                    column: 4,
                    value: Identifier(
                        Node {
                            start: 4,
                            end: 5,
                            line: 1,
                            column: 4,
                            value: Identifier_ {
                                name: "x",
                            },
                        },
                    ),
                },
                value: Node {
                    start: 8,
                    end: 11,
                    line: 1,
                    column: 8,
                    value: FnCall(
                        Node {
                            start: 8,
                            end: 9,
                            line: 1,
                            column: 8,
                            value: Identifier(
                                Node {
                                    start: 8,
                                    end: 9,
                                    line: 1,
                                    column: 8,
                                    value: Identifier_ {
                                        name: "a",
                                    },
                                },
                            ),
                        },
                        [
                            Node {
                                start: 10,
                                end: 11,
                                line: 1,
                                column: 10,
                                value: Identifier(
                                    Node {
                                        start: 10,
                                        end: 11,
                                        line: 1,
                                        column: 10,
                                        value: Identifier_ {
                                            name: "x",
                                        },
                                    },
                                ),
                            },
                        ],
                    ),
                },
            },
        ],
        Node {
            start: 15,
            end: 16,
            line: 1,
            column: 15,
            value: Identifier(
                Node {
                    start: 15,
                    end: 16,
                    line: 1,
                    column: 15,
                    value: Identifier_ {
                        name: "x",
                    },
                },
            ),
        },
    ),
}
