src/snapshots/alma__parser__tests__expression_parser-43.snap
---
source: src/parser.rs
expression: "parse(\"let x = a\\n  x\\nin\\nx\")"

---
Input:

let x = a
  x
in
x

Result:

Node {
    start: 0,
    end: 18,
    line: 1,
    column: 0,
    value: Let(
        [
            Definition {
                lhs: Pattern(
                    Node {
                        start: 4,
                        end: 5,
                        line: 1,
                        column: 4,
                        value: Identifier(
                            Node {
                                start: 4,
                                end: 5,
                                line: 1,
                                column: 4,
                                value: Identifier_ {
                                    name: "x",
                                    case: Camel,
                                },
                            },
                        ),
                    },
                ),
                value: Node {
                    start: 8,
                    end: 13,
                    line: 1,
                    column: 8,
                    value: FnCall(
                        Node {
                            start: 8,
                            end: 9,
                            line: 1,
                            column: 8,
                            value: Identifier(
                                Node {
                                    start: 8,
                                    end: 9,
                                    line: 1,
                                    column: 8,
                                    value: Identifier_ {
                                        name: "a",
                                        case: Camel,
                                    },
                                },
                            ),
                        },
                        [
                            Node {
                                start: 12,
                                end: 13,
                                line: 2,
                                column: 2,
                                value: Identifier(
                                    Node {
                                        start: 12,
                                        end: 13,
                                        line: 2,
                                        column: 2,
                                        value: Identifier_ {
                                            name: "x",
                                            case: Camel,
                                        },
                                    },
                                ),
                            },
                        ],
                    ),
                },
            },
        ],
        Node {
            start: 17,
            end: 18,
            line: 4,
            column: 0,
            value: Identifier(
                Node {
                    start: 17,
                    end: 18,
                    line: 4,
                    column: 0,
                    value: Identifier_ {
                        name: "x",
                        case: Camel,
                    },
                },
            ),
        },
    ),
}
